fix: Alignment with board component handles

--- a/src/header/styles.scss
+++ b/src/header/styles.scss
@@ -6,6 +6,10 @@
 @use '../internal/styles/tokens' as awsui;
 @use '../internal/styles' as styles;
 
+@function space-heading-button-diff($heading-height) {
+  @return calc((#{awsui.$size-vertical-input} - #{$heading-height}) / 2);
+}
+
 .root {
   @include styles.styles-reset();
   cursor: inherit;
@@ -44,8 +48,7 @@
   &.refresh {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    // Can't use justify-content: center because it won't align with configurable dashboard handle icon
+    // Can't use justify-content: center because it won't align with configurable dashboard fixed handle icon
   }
 
   &-variant-h1 {
@@ -105,25 +108,17 @@
   @include styles.text-wrapping;
   color: awsui.$color-text-heading-default;
 
-  &-variant-h1 {
-    font-size: awsui.$font-heading-xl-size;
-    // Use padding rather than center align so that all headers of the same size start at the same height in the container,
+  &-variant-h1.refresh {
+    // Use padding rather than center align with min height to avoid having extra bottom space when no actions are present.
+    // Having top padding always present ensures that all headers of the same variant start at the same height in the container,
     // whether there are buttons present or not; otherwise configurable dashboard handles are misaligned.
-    // &.refresh.has-actions {
-    //   padding-top: calc((#{awsui.$size-vertical-input} - #{awsui.$font-heading-xl-line-height}) / 2);
-    // }
+    padding-top: space-heading-button-diff(awsui.$font-heading-xl-line-height);
   }
-  &-variant-h2 {
-    font-size: awsui.$font-heading-l-size;
-    // &.refresh.has-actions {
-    //   padding-top: calc((#{awsui.$size-vertical-input} - #{awsui.$font-heading-l-line-height}) / 2);
-    // }
+  &-variant-h2.refresh {
+    padding-top: space-heading-button-diff(awsui.$font-heading-l-line-height);
   }
-  &-variant-h3 {
-    font-size: awsui.$font-heading-m-size;
-    // &.refresh.has-actions {
-    //   padding-top: calc((#{awsui.$size-vertical-input} - #{awsui.$font-heading-m-line-height}) / 2);
-    // }
+  &-variant-h3.refresh {
+    padding-top: space-heading-button-diff(awsui.$font-heading-m-line-height);
   }
   &-variant-h2:not(.refresh),
   &-variant-h3:not(.refresh) {
